--- a/server/package.json
+++ b/server/package.json
@@ -24,9 +24,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "flutterwave-node-v3": "^1.1.12",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "^10.0.0",
+    "i": "^0.3.7",
+    "npm": "^10.9.0"
   }
 }
