--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "next-themes": "^0.3.0",
     "query-string": "^9.1.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-redux": "^9.1.2",
