--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "engines": {
     "node": "18.x"
   },
+  "type": "module",
   "scripts": {
     "start": "node server.ts",
     "dev": "ts-node-dev --respawn --transpile-only server.ts",
